--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     <style>
       body {
         font-family: "Manrope", sans-serif;
+        background: linear-gradient(
+          0deg,
+          rgb(255, 255, 255),
+          rgba(255, 255, 255, 0) 100%
+        );
       }
     </style>
   </head>
@@ -40,8 +45,11 @@
         >
           <!-- Logo Section -->
           <div class="flex items-center">
-            <i class="fa-solid fa-arrow-right"></i>
-            <span class="text-lg font-bold">Rinterio</span>
+            <i
+              class="fa-solid fa-arrow-right w-8 h-8 flex items-center justify-center p-1 rounded-full bg-[#ABEF5F] mr-2 rotate-[-38deg]"
+            ></i>
+
+            <span class="text-3xl font-bold">Rinterio</span>
           </div>
 
           <!-- Menu Links (hidden on mobile) -->
@@ -55,8 +63,22 @@
 
           <!-- Button and Hamburger Menu -->
           <div class="flex items-center space-x-4">
-            <button class="hidden lg:inline-flex">Book Consult</button>
-
+            <div class="hidden lg:flex space-x-2">
+              <i
+                class="fas fa-search text-gray-600 w-8 h-8 flex items-center justify-center rounded-full text-sm bg-[#ffffff] shadow-lg"
+              ></i>
+              <i
+                class="fas fa-shopping-cart text-gray-600 w-8 h-8 flex items-center justify-center rounded-full text-sm bg-[#ffffff] shadow-lg"
+              ></i>
+            </div>
+            <button
+              class="hidden lg:inline-flex items-center justify-center px-4 py-2 bg-[#ABEF5F] text-black rounded-full"
+            >
+              Book Consult
+              <i
+                class="fa-solid fa-arrow-right w-5 h-5 ml-2 rotate-[-38deg] bg-black text-white rounded-full content-center"
+              ></i>
+            </button>
             <!-- DaisyUI dropdown for mobile menu -->
             <div class="lg:hidden dropdown dropdown-end">
               <label tabindex="0" class="btn btn-ghost btn-circle">
@@ -77,7 +99,7 @@
               </label>
               <ul
                 tabindex="0"
-                class="dropdown-content mt-3 p-2 shadow bg-white rounded-box w-52"
+                class="dropdown-content mt-3 p-2 shadow bg-white rounded-box w-52 space-y-3"
               >
                 <li>
                   <a href="#" class="text-gray-600 hover:text-gray-900">Home</a>
@@ -102,6 +124,22 @@
                     >Contact Us</a
                   >
                 </li>
+                <div class="flex items-center space-x-2">
+                  <i
+                    class="fas fa-search text-gray-600 w-8 h-8 flex items-center justify-center rounded-full text-sm bg-[#ffffff] shadow-lg"
+                  ></i>
+                  <i
+                    class="fas fa-shopping-cart text-gray-600 w-8 h-8 flex items-center justify-center rounded-full text-sm bg-[#ffffff] shadow-lg"
+                  ></i>
+                </div>
+                <button
+              class="inline-block items-center justify-center px-4 py-2 bg-[#ABEF5F] text-black rounded-full"
+            >
+              Book Consult
+              <i
+                class="fa-solid fa-arrow-right w-5 h-5 ml-2 rotate-[-38deg] bg-black text-white rounded-full content-center"
+              ></i>
+            </button>
               </ul>
             </div>
           </div>
@@ -115,7 +153,9 @@
           alt="Modern Barn House"
           class="mx-auto w-full max-w-lg mb-6"
         />
-        <h1 class="text-3xl md:text-5xl lg:text-6xl font-bold leading-10 lg:leading-[72px]">
+        <h1
+          class="text-3xl md:text-5xl lg:text-6xl font-bold leading-10 lg:leading-[72px]"
+        >
           A barn house of this design has a <br />
           striking appearance
         </h1>
@@ -124,7 +164,14 @@
           sophistication, featuring weathered wood, sleek metal accents, and
           large windows that flood the space with natural light.
         </p>
-        <button class="mt-6">View Details</button>
+        <button
+              class="hidden lg:inline-flex items-center justify-center px-4 py-2 mt-10 bg-[#ABEF5F80] text-black rounded-full"
+            >
+              Vew Result
+              <i
+                class="fa-solid fa-arrow-right w-5 h-5 ml-2 rotate-[-38deg] bg-black text-white rounded-full content-center"
+              ></i>
+            </button>
       </div>
     </header>
     <!-- This is header section  -->
