--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </style>
   </head>
   <body>
+       <!-- This is header section  -->
     <header class="max-w-6xl mx-auto">
       <!-- Navbar -->
       <nav class="">
@@ -165,7 +166,7 @@
           large windows that flood the space with natural light.
         </p>
         <button
-              class="hidden lg:inline-flex items-center justify-center px-4 py-2 mt-10 bg-[#ABEF5F80] text-black rounded-full"
+              class="w-full lg:w-52 inline-flex items-center justify-center px-4 py-2 mt-10 bg-[#ABEF5F80] text-black rounded-full"
             >
               Vew Result
               <i
@@ -174,11 +175,88 @@
             </button>
       </div>
     </header>
-    <!-- This is header section  -->
-    <header></header>
     <!-- This header section end -->
     <!-- main section  -->
-    <main></main>
+    <main>
+      <!-- We design thoughtful, liveable spaces section design start  -->
+  <section class="bg-gradient-to-b from-gray-200 to-[#FFFFFF] border-gray-200 py-10 px-6 pb-28 shadow-lg">
+    <div class="max-w-6xl mx-auto flex flex-col md:flex-row items-center md:space-x-10  ">
+      <!-- Text Section -->
+      <div class="md:w-1/2 text-center md:text-left">
+      <div class="relative inline-block">
+        <img class="absolute right-[42px] -top-[57px]" src="assets/Vector.png" alt="">
+        <a class="text-gray-600 hover:text-gray-900 bg-white px-4 py-2 rounded-full" href="#"><i class="fa-solid fa-arrow-right pr-3"></i>About Us</a>
+      </div>
+          <h1 class="text-3xl md:text-4xl font-bold text-gray-900 mt-4 mb-4">We design thoughtful, liveable spaces</h1>
+          <p class="text-gray-600 mb-6">
+              The barn house captivates with its blend of rustic <br> charm and modern sophistication, featuring weathered wood, sleek metal accents.
+          </p>
+          <!-- Service Cards -->
+          <div class="space-y-4">
+              <div class="bg-white p-6 rounded-lg shadow-lg flex items-center">
+                  <div class="flex gap-8">
+                    <div>
+                      <img src="assets/commercial.png" alt="">
+                    </div>
+                      <div>
+                        <h2 class="text-lg font-semibold text-gray-800">Commercial</h2>
+                      <p class="text-gray-600 text-sm">The barn house captivates with its blend <br> of rustic charm and modern.</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="bg-white p-6 rounded-lg shadow-lg flex items-center">
+                  <div class="flex gap-8">
+                    <img src="assets/residential.png" alt="">
+                    <div>
+                      <h2 class="text-lg font-semibold text-gray-800">Residential</h2>
+                      <p class="text-gray-600 text-sm">The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <!-- Image Section -->
+      <div class="md:w-1/2 mt-8 md:mt-0 drop-shadow-2xl">
+          <img src="assets/Rectangle.png" alt="Modern House" class="w-full rounded-lg shadow-lg">
+      </div>
+    </div>
+  </section>
+
+    <!-- Stats Section -->
+    <section class="max-w-6xl mx-auto bg-white py-8 px-6 md:px-20 shadow-lg mb-4 -mt-8">
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
+            <div>
+              <div class="flex items-center justify-center">
+                <img class="w-[66px] mb-4" src="assets/sms.png" alt="">
+              </div>
+                <h3 class="text-3xl font-bold text-gray-900">235+</h3>
+                <p class="text-gray-600">Happy Client Review</p>
+            </div>
+            <div>
+                <div class="flex items-center justify-center">
+                  <img class="w-[60px] mb-4" src="assets/mobile-button.png" alt="">
+                </div>
+                <h3 class="text-3xl font-bold text-gray-900">50+</h3>
+                <p class="text-gray-600">Work Departments</p>
+            </div>
+            <div>
+              <div class="flex items-center justify-center">
+                <img  class="w-[60px] mb-4" src="assets/man-3.png" alt="">
+              </div>
+                <h3 class="text-3xl font-bold text-gray-900">30k+</h3>
+                <p class="text-gray-600">Our Happy Client</p>
+            </div>
+            <div>
+              <div class="flex items-center justify-center">
+                <img class="w-[60px] mb-4" src="assets/man-2.png" alt="">
+              </div>
+                <h3 class="text-3xl font-bold text-gray-900">307+</h3>
+                <p class="text-gray-600">Staff Members</p>
+            </div>
+        </div>
+    </section>
+
+    </main>
     <!-- main section end -->
     <!-- footer section  -->
     <footer></footer>
