--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </style>
   </head>
   <body>
-       <!-- This is header section  -->
+    <!-- This is header section  -->
     <header class="max-w-6xl mx-auto">
       <!-- Navbar -->
       <nav class="">
@@ -134,13 +134,13 @@
                   ></i>
                 </div>
                 <button
-              class="inline-block items-center justify-center px-4 py-2 bg-[#ABEF5F] text-black rounded-full"
-            >
-              Book Consult
-              <i
-                class="fa-solid fa-arrow-right w-5 h-5 ml-2 rotate-[-38deg] bg-black text-white rounded-full content-center"
-              ></i>
-            </button>
+                  class="inline-block items-center justify-center px-4 py-2 bg-[#ABEF5F] text-black rounded-full"
+                >
+                  Book Consult
+                  <i
+                    class="fa-solid fa-arrow-right w-5 h-5 ml-2 rotate-[-38deg] bg-black text-white rounded-full content-center"
+                  ></i>
+                </button>
               </ul>
             </div>
           </div>
@@ -166,96 +166,270 @@
           large windows that flood the space with natural light.
         </p>
         <button
-              class="w-full lg:w-52 inline-flex items-center justify-center px-4 py-2 mt-10 bg-[#ABEF5F80] text-black rounded-full"
-            >
-              Vew Result
-              <i
-                class="fa-solid fa-arrow-right w-5 h-5 ml-2 rotate-[-38deg] bg-black text-white rounded-full content-center"
-              ></i>
-            </button>
+          class="w-full lg:w-52 inline-flex items-center justify-center px-4 py-2 mt-10 bg-[#ABEF5F80] text-black rounded-full"
+        >
+          Vew Result
+          <i
+            class="fa-solid fa-arrow-right w-5 h-5 ml-2 rotate-[-38deg] bg-black text-white rounded-full content-center"
+          ></i>
+        </button>
       </div>
     </header>
     <!-- This header section end -->
     <!-- main section  -->
     <main>
       <!-- We design thoughtful, liveable spaces section design start  -->
-  <section class="bg-gradient-to-b from-gray-200 to-[#FFFFFF] border-gray-200 py-10 px-6 pb-28 shadow-lg">
-    <div class="max-w-6xl mx-auto flex flex-col md:flex-row items-center md:space-x-10  ">
-      <!-- Text Section -->
-      <div class="md:w-1/2 text-center md:text-left">
-      <div class="relative inline-block">
-        <img class="absolute right-[42px] -top-[57px]" src="assets/Vector.png" alt="">
-        <a class="text-gray-600 hover:text-gray-900 bg-white px-4 py-2 rounded-full" href="#"><i class="fa-solid fa-arrow-right pr-3"></i>About Us</a>
-      </div>
-          <h1 class="text-3xl md:text-4xl font-bold text-gray-900 mt-4 mb-4">We design thoughtful, liveable spaces</h1>
-          <p class="text-gray-600 mb-6">
-              The barn house captivates with its blend of rustic <br> charm and modern sophistication, featuring weathered wood, sleek metal accents.
-          </p>
-          <!-- Service Cards -->
-          <div class="space-y-4">
-              <div class="bg-white p-6 rounded-lg shadow-lg flex items-center">
-                  <div class="flex gap-8">
-                    <div>
-                      <img src="assets/commercial.png" alt="">
-                    </div>
-                      <div>
-                        <h2 class="text-lg font-semibold text-gray-800">Commercial</h2>
-                      <p class="text-gray-600 text-sm">The barn house captivates with its blend <br> of rustic charm and modern.</p>
-                      </div>
-                  </div>
-              </div>
-              <div class="bg-white p-6 rounded-lg shadow-lg flex items-center">
-                  <div class="flex gap-8">
-                    <img src="assets/residential.png" alt="">
-                    <div>
-                      <h2 class="text-lg font-semibold text-gray-800">Residential</h2>
-                      <p class="text-gray-600 text-sm">The barn house captivates with its blend of rustic charm and modern.</p>
-                    </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <!-- Image Section -->
-      <div class="md:w-1/2 mt-8 md:mt-0 drop-shadow-2xl">
-          <img src="assets/Rectangle.png" alt="Modern House" class="w-full rounded-lg shadow-lg">
-      </div>
-    </div>
-  </section>
-
-    <!-- Stats Section -->
-    <section class="max-w-6xl mx-auto bg-white py-8 px-6 md:px-20 shadow-lg mb-4 -mt-8">
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
-            <div>
-              <div class="flex items-center justify-center">
-                <img class="w-[66px] mb-4" src="assets/sms.png" alt="">
-              </div>
-                <h3 class="text-3xl font-bold text-gray-900">235+</h3>
-                <p class="text-gray-600">Happy Client Review</p>
+      <section
+        class="bg-gradient-to-b from-gray-200 to-[#FFFFFF] border-gray-200 py-10 px-6 pb-28 shadow-lg"
+      >
+        <div
+          class="max-w-6xl mx-auto flex flex-col md:flex-row items-center md:space-x-10"
+        >
+          <!-- Text Section -->
+          <div class="md:w-1/2 text-center md:text-left">
+            <div class="relative inline-block">
+              <img
+                class="absolute right-[42px] -top-[57px]"
+                src="assets/Vector.png"
+                alt=""
+              />
+              <a
+                class="text-gray-600 hover:text-gray-900 bg-white px-4 py-2 rounded-full"
+                href="#"
+                ><i class="fa-solid fa-arrow-right pr-3"></i>About Us</a
+              >
             </div>
-            <div>
-                <div class="flex items-center justify-center">
-                  <img class="w-[60px] mb-4" src="assets/mobile-button.png" alt="">
+            <h1 class="text-3xl md:text-4xl font-bold text-gray-900 mt-4 mb-4">
+              We design thoughtful, liveable spaces
+            </h1>
+            <p class="text-gray-600 mb-6">
+              The barn house captivates with its blend of rustic <br />
+              charm and modern sophistication, featuring weathered wood, sleek
+              metal accents.
+            </p>
+            <!-- Service Cards -->
+            <div class="space-y-4">
+              <div class="bg-white p-6 rounded-lg shadow-lg flex items-center">
+                <div class="flex gap-8">
+                  <div>
+                    <img src="assets/commercial.png" alt="" />
+                  </div>
+                  <div>
+                    <h2 class="text-lg font-semibold text-gray-800">
+                      Commercial
+                    </h2>
+                    <p class="text-gray-600 text-sm">
+                      The barn house captivates with its blend <br />
+                      of rustic charm and modern.
+                    </p>
+                  </div>
                 </div>
-                <h3 class="text-3xl font-bold text-gray-900">50+</h3>
-                <p class="text-gray-600">Work Departments</p>
-            </div>
-            <div>
-              <div class="flex items-center justify-center">
-                <img  class="w-[60px] mb-4" src="assets/man-3.png" alt="">
               </div>
-                <h3 class="text-3xl font-bold text-gray-900">30k+</h3>
-                <p class="text-gray-600">Our Happy Client</p>
-            </div>
-            <div>
-              <div class="flex items-center justify-center">
-                <img class="w-[60px] mb-4" src="assets/man-2.png" alt="">
+              <div class="bg-white p-6 rounded-lg shadow-lg flex items-center">
+                <div class="flex gap-8">
+                  <img src="assets/residential.png" alt="" />
+                  <div>
+                    <h2 class="text-lg font-semibold text-gray-800">
+                      Residential
+                    </h2>
+                    <p class="text-gray-600 text-sm">
+                      The barn house captivates with its blend of rustic charm
+                      and modern.
+                    </p>
+                  </div>
+                </div>
               </div>
-                <h3 class="text-3xl font-bold text-gray-900">307+</h3>
-                <p class="text-gray-600">Staff Members</p>
+            </div>
+          </div>
+          <!-- Image Section -->
+          <div class="md:w-1/2 mt-8 md:mt-0 drop-shadow-2xl">
+            <img
+              src="assets/Rectangle.png"
+              alt="Modern House"
+              class="w-full rounded-lg shadow-lg"
+            />
+          </div>
+        </div>
+      </section>
+      <!-- We design thoughtful, liveable spaces section design end -->
+      <!-- Counter  Section design start -->
+      <section
+        class="max-w-6xl mx-auto bg-white py-8 px-6 md:px-20 shadow-lg mb-4 -mt-8"
+      >
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
+          <div>
+            <div class="flex items-center justify-center">
+              <img class="w-[66px] mb-4" src="assets/sms.png" alt="" />
+            </div>
+            <h3 class="text-3xl font-bold text-gray-900">235+</h3>
+            <p class="text-gray-600">Happy Client Review</p>
+          </div>
+          <div>
+            <div class="flex items-center justify-center">
+              <img
+                class="w-[60px] mb-4"
+                src="assets/mobile-button.png"
+                alt=""
+              />
+            </div>
+            <h3 class="text-3xl font-bold text-gray-900">50+</h3>
+            <p class="text-gray-600">Work Departments</p>
+          </div>
+          <div>
+            <div class="flex items-center justify-center">
+              <img class="w-[60px] mb-4" src="assets/man-3.png" alt="" />
+            </div>
+            <h3 class="text-3xl font-bold text-gray-900">30k+</h3>
+            <p class="text-gray-600">Our Happy Client</p>
+          </div>
+          <div>
+            <div class="flex items-center justify-center">
+              <img class="w-[60px] mb-4" src="assets/man-2.png" alt="" />
+            </div>
+            <h3 class="text-3xl font-bold text-gray-900">307+</h3>
+            <p class="text-gray-600">Staff Members</p>
+          </div>
+        </div>
+      </section>
+      <!-- conunter Section design end -->
+      <!-- Our Work Section design start -->
+      <section
+        class="max-w-6xl mx-auto bg-white mt-24 mb-11 border-dashed border-2 border-gray-200"
+      >
+        <div class="text-center mb-8">
+          <button
+            class="bg-gray-200 text-gray-600 px-4 py-2 rounded-full text-lg font-bold mb-4"
+          >
+            → How we work
+          </button>
+          <h1 class="text-5xl font-bold text-gray-900">Our Works Process</h1>
+          <p class="text-gray-600 mt-3">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, <br />
+            featuring weathered wood, sleek metal accents.
+          </p>
+        </div>
+
+        <!-- Process Cards -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
+          <!-- Concept Card -->
+          <div class="bg-[#E7C1D3] p-6 rounded-lg shadow">
+            <div class="text-gray-700 mb-4">
+              <img src="assets/concept.png" alt="" />
+            </div>
+            <h2 class="text-lg font-semibold text-gray-800 mb-2">Concept</h2>
+            <p class="text-gray-600 text-sm">
+              The barn house captivates with its blend of rustic charm and
+              modern.
+            </p>
+          </div>
+
+          <!-- Design Process Card -->
+          <div class="bg-[#EFDA6E] p-6 rounded-lg shadow">
+            <div class="text-gray-700 mb-4">
+              <img src="assets/flow-chart.png" alt="" />
+            </div>
+            <h2 class="text-lg font-semibold text-gray-800 mb-2">
+              Design Process
+            </h2>
+            <p class="text-gray-600 text-sm">
+              The barn house captivates with its blend of rustic charm and
+              modern.
+            </p>
+          </div>
+
+          <!-- Supervision Card -->
+          <div class="bg-[#A4DAC3] p-6 rounded-lg shadow">
+            <div class="text-gray-700 mb-4">
+              <img src="assets/vision.png" alt="" />
+            </div>
+            <h2 class="text-lg font-semibold text-gray-800 mb-2">
+              Supervision
+            </h2>
+            <p class="text-gray-600 text-sm">
+              The barn house captivates with its blend of rustic charm and
+              modern.
+            </p>
+          </div>
+
+          <!-- Budget Planning Card -->
+          <div class="bg-[#77AAEA] p-6 rounded-lg shadow">
+            <div class="text-gray-700 mb-4">
+              <img src="assets/budget-planning.png" alt="" />
+            </div>
+            <h2 class="text-lg font-semibold text-gray-800 mb-2">
+              Budget Planning
+            </h2>
+            <p class="text-gray-600 text-sm">
+              The barn house captivates with its blend of rustic charm and
+              modern.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- Our Work Section design end -->
+
+      <!-- our latast Portfolio section design start -->
+      <section class="max-w-6xl mx-auto p-8 my-10 bg-white">
+        <!-- Header Section -->
+        <div class="text-center mb-8">
+            <button class="bg-green-100 text-green-600 px-4 py-2 rounded-full text-sm mb-4">→ Explore our Latest works</button>
+            <h1 class="text-2xl font-bold text-gray-900">Our Latest Portfolio</h1>
+            <p class="text-gray-600 mt-2">
+                The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.
+            </p>
+        </div>
+
+        <!-- Portfolio Cards -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-6">
+            <!-- Portfolio Item -->
+            <div class="bg-white border rounded-lg shadow p-4">
+                <div class="border-dashed border-2 border-gray-300 rounded-lg mb-4 p-4 flex items-center justify-center h-48">
+                    <!-- Placeholder SVG -->
+                    <svg class="w-24 h-24 text-gray-400" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/></svg>
+                </div>
+                <h2 class="text-lg font-semibold text-gray-800">Commercial</h2>
+                <p class="text-gray-600 text-sm">
+                    The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern.
+                </p>
+                <a href="#" class="text-green-600 font-semibold mt-4 inline-flex items-center">
+                    View Details
+                    <svg class="w-4 h-4 ml-1" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2l8 8-8 8"/></svg>
+                </a>
+            </div>
+
+            <!-- Repeat Portfolio Items as Needed -->
+            <div class="bg-white border rounded-lg shadow p-4">
+                <div class="border-dashed border-2 border-gray-300 rounded-lg mb-4 p-4 flex items-center justify-center h-48">
+                    <svg class="w-24 h-24 text-gray-400" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/></svg>
+                </div>
+                <h2 class="text-lg font-semibold text-gray-800">Commercial</h2>
+                <p class="text-gray-600 text-sm">
+                    The barn house captivates with its blend of rustic charm and modern.
+                </p>
+                <a href="#" class="text-green-600 font-semibold mt-4 inline-flex items-center">
+                    View Details
+                    <svg class="w-4 h-4 ml-1" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2l8 8-8 8"/></svg>
+                </a>
+            </div>
+
+            <!-- Repeat More Items as Needed -->
+            <div class="bg-white border rounded-lg shadow p-4">
+                <div class="border-dashed border-2 border-gray-300 rounded-lg mb-4 p-4 flex items-center justify-center h-48">
+                    <svg class="w-24 h-24 text-gray-400" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/></svg>
+                </div>
+                <h2 class="text-lg font-semibold text-gray-800">Commercial</h2>
+                <p class="text-gray-600 text-sm">
+                    The barn house captivates with its blend of rustic charm and modern.
+                </p>
+                <a href="#" class="text-green-600 font-semibold mt-4 inline-flex items-center">
+                    View Details
+                    <svg class="w-4 h-4 ml-1" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2l8 8-8 8"/></svg>
+                </a>
             </div>
         </div>
     </section>
-
+    <!-- our latast Portfolio section design end -->
     </main>
     <!-- main section end -->
     <!-- footer section  -->
