Compleate my Tailwind website Assignment -3

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       </nav>
 
       <!-- Hero Section -->
-      <div class="container mx-auto px-4 py-20 text-center">
+      <div  id="home" class="container mx-auto px-4 py-[35px] lg:py-20 text-center">
         <img
           src="assets/banner.png"
           alt="Modern Barn House"
@@ -179,7 +179,7 @@
     <!-- main section  -->
     <main>
       <!-- We design thoughtful, liveable spaces section design start  -->
-      <section
+      <section  id="service"
         class="bg-gradient-to-b from-gray-200 to-[#FFFFFF] border-gray-200 py-10 px-6 pb-28 shadow-lg"
       >
         <div
@@ -189,7 +189,7 @@
           <div class="md:w-1/2 text-center md:text-left">
             <div class="relative inline-block">
               <img
-                class="absolute right-[42px] -top-[57px]"
+                class="absolute hidden lg:block right-[42px] -top-[57px]"
                 src="assets/Vector.png"
                 alt=""
               />
@@ -203,8 +203,8 @@
               We design thoughtful, liveable spaces
             </h1>
             <p class="text-gray-600 mb-6">
-              The barn house captivates with its blend of rustic <br />
-              charm and modern sophistication, featuring weathered wood, sleek
+              The barn house captivates with its blend of rustic
+              charm and modern sophistication, <br /> featuring weathered wood, sleek
               metal accents.
             </p>
             <!-- Service Cards -->
@@ -212,9 +212,9 @@
               <div class="bg-white p-6 rounded-lg shadow-lg flex items-center">
                 <div class="flex gap-8">
                   <div>
-                    <img src="assets/commercial.png" alt="" />
+                    <img class="w-12 lg:w-[60px] h-12 lg:h-[60px]" src="assets/commercial.png" alt="" />
                   </div>
-                  <div>
+                  <div class="text-left">
                     <h2 class="text-lg font-semibold text-gray-800">
                       Commercial
                     </h2>
@@ -227,8 +227,8 @@
               </div>
               <div class="bg-white p-6 rounded-lg shadow-lg flex items-center">
                 <div class="flex gap-8">
-                  <img src="assets/residential.png" alt="" />
-                  <div>
+                  <img class="w-12 lg:w-[60px] h-12 lg:h-[60px]" src="assets/residential.png" alt="" />
+                  <div class="text-left">
                     <h2 class="text-lg font-semibold text-gray-800">
                       Residential
                     </h2>
@@ -254,12 +254,12 @@
       <!-- We design thoughtful, liveable spaces section design end -->
       <!-- Counter  Section design start -->
       <section
-        class="max-w-6xl mx-auto bg-white py-8 px-6 md:px-20 shadow-lg mb-4 -mt-8"
+        class="max-w-6xl mx-5 lg:mx-auto bg-white py-8 px-6 md:px-20 shadow-lg border lg:border-t-0  mb-4 mt-8 lg:-mt-8 rounded-lg"
       >
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-6 text-center">
           <div>
             <div class="flex items-center justify-center">
-              <img class="w-[66px] mb-4" src="assets/sms.png" alt="" />
+              <img class="w-[30px] mb-4" src="assets/sms.png" alt="" />
             </div>
             <h3 class="text-3xl font-bold text-gray-900">235+</h3>
             <p class="text-gray-600">Happy Client Review</p>
@@ -267,7 +267,7 @@
           <div>
             <div class="flex items-center justify-center">
               <img
-                class="w-[60px] mb-4"
+                class="w-[30px] mb-4"
                 src="assets/mobile-button.png"
                 alt=""
               />
@@ -277,14 +277,14 @@
           </div>
           <div>
             <div class="flex items-center justify-center">
-              <img class="w-[60px] mb-4" src="assets/man-3.png" alt="" />
+              <img class="w-[30px] mb-4" src="assets/man-3.png" alt="" />
             </div>
             <h3 class="text-3xl font-bold text-gray-900">30k+</h3>
             <p class="text-gray-600">Our Happy Client</p>
           </div>
           <div>
             <div class="flex items-center justify-center">
-              <img class="w-[60px] mb-4" src="assets/man-2.png" alt="" />
+              <img class="w-[30px] mb-4" src="assets/man-2.png" alt="" />
             </div>
             <h3 class="text-3xl font-bold text-gray-900">307+</h3>
             <p class="text-gray-600">Staff Members</p>
@@ -293,18 +293,18 @@
       </section>
       <!-- conunter Section design end -->
       <!-- Our Work Section design start -->
-      <section class="bg-gray-100 mt-24 mb-11 py-12">
-        <div class="max-w-6xl mx-auto border-dashed border-2 border-gray-200">
+      <section id="blogs" class="bg-gray-100 mt-10 lg:mt-24 mb-11 py-12">
+        <div class="max-w-6xl mx-5 lg:mx-auto border-hidden lg:border-dashed border-2 border-gray-200">
           <div class="text-center mb-8">
             <button
               class="bg-gray-200 text-gray-600 px-4 py-2 rounded-full text-lg font-bold mb-4"
             >
               <i class="fa-solid fa-arrow-right pr-3"></i>How we work
             </button>
-            <h1 class="text-5xl font-bold text-gray-900">Our Works Process</h1>
+            <h1 class="text-2xl lg:text-5xl font-bold text-gray-900">Our Works Process</h1>
             <p class="text-gray-600 mt-3">
-              The barn house captivates with its blend of rustic charm and
-              modern sophistication, <br />
+              The barn house captivates with its blend of<br> rustic  charm and
+              modern sophistication,
               featuring weathered wood, sleek metal accents.
             </p>
           </div>
@@ -370,7 +370,7 @@
       <!-- Our Work Section design end -->
 
       <!-- our latast Portfolio section design start -->
-      <section class="max-w-6xl mx-auto p-8 my-10 bg-white">
+      <section  id="piortfolio" class="max-w-6xl mx-auto p-8 my-10 bg-white">
         <!-- Header Section -->
         <div class="text-center mb-8">
           <button
@@ -378,7 +378,7 @@
           >
             <i class="fa-solid fa-arrow-right pr-3"></i>Explore our Latest works
           </button>
-          <h1 class="text-5xl font-bold text-gray-900 my-2">
+          <h1 class="text-2xl lg:text-5xl font-bold text-gray-900 my-2">
             Our Latest Portfolio
           </h1>
           <p class="text-gray-600 mt-3">
@@ -389,11 +389,11 @@
         </div>
 
         <!-- Portfolio Cards 1-->
-        <div class="flex gap-6 mb-6">
-          <div class="flex items-center space-x-4 border p-3 rounded-lg w-[752px]">
-            <div class="">
+        <div class="flex-none lg:flex gap-6 mb-6 space-y-6 lg:space-y-0">
+          <div class="flex-none lg:flex items-center space-x-4 border p-3 rounded-lg w-full lg:w-[752px]">
+            <div>
               <img
-                class="w-[450px] h-40 border-dashed border-2 border-gray-200 shadow-lg"
+                class="w-[450px] h-[197px] border-dashed border-2 border-gray-200 shadow-lg"
                 src="assets/img1.png"
                 alt=""
               />
@@ -414,7 +414,7 @@
           <div class="flex items-center space-x-4 border p-3 rounded-lg">
             <div class="w-full">
               <img
-                class="w-full h-40 border-dashed border-2 border-gray-200 shadow-lg"
+                class="w-full h-[197px] border-dashed border-2 border-gray-200 shadow-lg"
                 src="assets/img2.png"
                 alt=""
               />
@@ -423,21 +423,21 @@
         </div>
 
         <!-- Portfolio Cards 2-->
-        <div class="flex gap-6">
+        <div class="flex-none lg:flex gap-6 space-y-6 lg:space-y-0">
           <div class="flex items-center space-x-4 border p-3 rounded-lg">
-            <div>
+            <div class="w-full">
               <img
-                class="w-[200px] h-40 border-dashed border-2 border-gray-200 shadow-lg"
+                class="w-full h-[197px] border-dashed border-2 border-gray-200 shadow-lg"
                 src="assets/img3.png"
                 alt=""
               />
             </div>
         </div>
 
-          <div class="flex items-center space-x-4 border p-3 rounded-lg">
+          <div class="flex-none lg:flex items-center space-x-4 border p-3 pr-0 lg:pr-[62px] rounded-lg">
             <div>
               <img
-                class="w-[300px] h-40 border-dashed border-2 border-gray-200 shadow-lg"
+                class="w-[96%] lg:w-[245px] h-[197px] border-dashed border-2 border-gray-200 shadow-lg"
                 src="assets/img4.png"
                 alt=""
               />
@@ -445,7 +445,7 @@
             <div>
               <h3 class="text-lg font-semibold text-gray-800 my-2">Commercial</h3>
               <p class="text-gray-600 text-sm">
-                The barn house captivates with its blend of rustic charm and modern. 
+                The barn house captivates with its <br> blend of rustic charm and modern. 
               </p>
               <div class="flex items-center mt-4">
                 <a target="_blank" href="#" class="text-gray-600 flex gap-3 font-bold">Vew Details<i
@@ -456,9 +456,9 @@
           </div>
 
           <div class="flex items-center space-x-4 border p-3 rounded-lg">
-            <div>
+            <div class="w-full">
               <img
-                class="w-[200px] h-40 border-dashed border-2 border-gray-200 shadow-lg"
+                class="w-full h-[197px] border-dashed border-2 border-gray-200 shadow-lg"
                 src="assets/img5.png"
                 alt=""
               />
@@ -467,10 +467,90 @@
         </div>
       </section>
       <!-- our latast Portfolio section design end -->
+      <!-- Let’s Discuss Next Project section design start  -->
+      <section  id="contact" class="bg-[url('assets/bg.jpg')] bg-cover bg-center h-full w-full py-16 mb-7">
+        <!-- main div Tsis Perent  -->
+         <div>
+          <!-- Heading Section -->
+          <div class="text-center mb-8 mx-5 lg:mx-0">
+            <button
+              class="bg-[#ABEF5F33] text-black px-4 py-2 rounded-full text-sm mb-4"
+            >
+              <i class="fa-solid fa-arrow-right pr-3"></i>Let’s Connect
+            </button>
+            <h1 class="text-2xl lg:text-5xl font-bold text-gray-900 my-2">
+              Let's Discuss Next Project
+            </h1>
+            <p class="text-gray-600 mt-3">
+              The barn house captivates with its blend of rustic charm and modern
+              <br />
+              sophistication, featuring weathered wood, sleek metal accents.
+            </p>
+          </div>
+          <!-- hading end  -->
+           <!-- form section design start  -->
+            <form class="max-w-4xl mx-2 lg:mx-auto">
+              <div class="flex-none lg:flex items-center space-x-0 lg:space-x-4 space-y-4 lg:space-y-0 border p-3 rounded-lg">
+                <input type="text" placeholder="First Name" class="w-full p-2 rounded-full"/>
+                <input type="email" placeholder="Last Name" class="w-full p-2 rounded-full" />
+              </div>
+              <!-- input 2 -->
+              <div class="flex-none lg:flex items-center space-x-0 lg:space-x-4 space-y-4 lg:space-y-0 border p-3 rounded-lg ">
+                <input type="text" placeholder="Mobile Number" class="w-full p-2 rounded-full " />
+                <input type="email" placeholder="Type your Email" class=" m-0 w-full p-2 rounded-full"/>
+              </div>
+              <!-- text area  -->
+                <div class="flex items-center space-x-4 border p-3 rounded-lg">
+                  <textarea placeholder="Type your message here" class="w-full h-52 p-2 rounded-lg resize-none box-border"></textarea>
+                </div>
+                <!-- button  -->
+                <div class="text-center">
+                  <a class="w-full lg:w-[870px] font-bold box-border inline-flex items-center justify-center p-2 rounded-full bg-[#ABEF5F] mt-3">Send Mail<i
+                    class="fa-solid fa-arrow-right w-6 h-6 flex items-center justify-center p-1 rounded-full bg-black text-white ml-2 rotate-[-38deg]"
+                  ></i></a>
+                </div>
+            </form>
+          </div>
+            <!-- form section design end  -->
+      </section>
+      <!-- Let’s Discuss Next Project section design end  -->
+
     </main>
     <!-- main section end -->
     <!-- footer section  -->
-    <footer></footer>
+    <footer>
+      <section class="bg-[#1e1e1e] text-white py-16 text-center">
+        <!-- footer main perent  -->
+         <div class="mx-5 lg:mx-0">
+          <!-- footer hading  -->
+          <div class="flex items-center justify-center">
+            <i
+              class="fa-solid fa-arrow-right w-8 h-8 flex items-center justify-center p-1 rounded-full bg-[#ABEF5F] mr-2 rotate-[-38deg] text-black"
+            ></i>
+
+            <span class="text-3xl font-bold">Rinterio</span>
+          </div>
+          <!-- footer hading end  -->
+           <!-- footer content  -->
+            <div class="mt-3">
+              <p class="text-gray-100">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <ul class="flex-none lg:flex items-center justify-center space-x-0 lg:space-x-20 space-y-5 lg:space-y-0 mt-6">
+              <li><a href="#home">Home</a></li>
+              <li><a href="#service">Service</a></li>
+              <li><a href="#piortfolio">Portfolio</a></li>
+              <li><a href="#blogs"></a>Blogs</li>
+              <li><a href="#contact">Contact Us</a></li>
+            </ul>
+              <!-- button  -->
+              <div class="text-center mt-6">
+                <button class="w-full lg:w-60 font-bold box-border inline-flex items-center justify-center p-2 rounded-full bg-[#ABEF5F] mt-3 text-black">Book Consult<i
+                  class="fa-solid fa-arrow-right w-6 h-6 flex items-center justify-center p-1 rounded-full bg-black text-white ml-2 rotate-[-38deg]"
+                ></i></button>
+              </div>
+         </div>
+      </section>
+    </footer>
     <!-- footer section end -->
   </body>
 </html>
