input padding placeholder changes add

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
           <!-- Menu Links (hidden on mobile) -->
           <div class="hidden lg:flex space-x-6">
-            <a href="#" class="text-gray-600 hover:text-gray-900">Home</a>
+            <a href="https://www.facebook.com/recover/initiate/?lara_product=www_first_password_failure&next=https%3A%2F%2Fwww.facebook.com%2Fgroups%2Fuylab.online.wordpress.mastery.zero.to.hero.06%2Fpermalink%2F1288414962513828%2F%3Frdid%3Dg9El35b0OtXZQhiR%26share_url%3Dhttps%25253A%25252F%25252Fwww.facebook.com%25252Fshare%25252Fp%25252F1ESHiZvQS4%25252F" class="text-gray-600 hover:text-gray-900">Home</a>
             <a href="#" class="text-gray-600 hover:text-gray-900">Services</a>
             <a href="#" class="text-gray-600 hover:text-gray-900">Portfolio</a>
             <a href="#" class="text-gray-600 hover:text-gray-900">Blogs</a>
@@ -491,17 +491,17 @@
            <!-- form section design start  -->
             <form class="max-w-4xl mx-2 lg:mx-auto">
               <div class="flex-none lg:flex items-center space-x-0 lg:space-x-4 space-y-4 lg:space-y-0 border p-3 rounded-lg">
-                <input type="text" placeholder="First Name" class="w-full p-2 rounded-full"/>
-                <input type="email" placeholder="Last Name" class="w-full p-2 rounded-full" />
+                <input type="text" placeholder="First Name" class="w-full p-2 px-4 rounded-full"/>
+                <input type="email" placeholder="Last Name" class="w-full p-2 px-4 rounded-full" />
               </div>
               <!-- input 2 -->
               <div class="flex-none lg:flex items-center space-x-0 lg:space-x-4 space-y-4 lg:space-y-0 border p-3 rounded-lg ">
-                <input type="text" placeholder="Mobile Number" class="w-full p-2 rounded-full " />
-                <input type="email" placeholder="Type your Email" class=" m-0 w-full p-2 rounded-full"/>
+                <input type="text" placeholder="Mobile Number" class="w-full p-2 px-4 rounded-full " />
+                <input type="email" placeholder="Type your Email" class=" m-0 w-full p-2 px-4 rounded-full"/>
               </div>
               <!-- text area  -->
                 <div class="flex items-center space-x-4 border p-3 rounded-lg">
-                  <textarea placeholder="Type your message here" class="w-full h-52 p-2 rounded-lg resize-none box-border"></textarea>
+                  <textarea placeholder="Type your message here" class="w-full h-52 p-2 px-4 rounded-lg resize-none box-border"></textarea>
                 </div>
                 <!-- button  -->
                 <div class="text-center">
