add header section margintop

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <!-- This is header section  -->
-    <header class="max-w-6xl mx-auto">
+    <header class="max-w-6xl mx-auto mt-5">
       <!-- Navbar -->
       <nav class="">
         <div
